--- a/Minesweeper/Minesweeper/packages.config
+++ b/Minesweeper/Minesweeper/packages.config
@@ -1,44 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package ID="Antlr" version="3.4.1.9004" targetFramework="net461" />
-  <package ID="bootstrap" version="3.0.0" targetFramework="net461" />
-  <package ID="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package ID="jQuery" version="1.10.2" targetFramework="net461" />
-  <package ID="jQuery.ValIDation" version="1.11.1" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
-  <package ID="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package ID="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
-  <package ID="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
-  <package ID="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
-  <package ID="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
-  <package ID="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
-  <package ID="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package ID="Microsoft.CodeDom.ProvIDers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
-  <package ID="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
-  <package ID="Microsoft.jQuery.Unobtrusive.ValIDation" version="3.2.3" targetFramework="net461" />
-  <package ID="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
-  <package ID="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
-  <package ID="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package ID="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package ID="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
-  <package ID="NuGet.Build" version="2.12.0" targetFramework="net461" />
-  <package ID="NuGet.CommandLine" version="1.0.11220.26" targetFramework="net461" />
-  <package ID="NuGetPowerTools" version="0.29" targetFramework="net461" />
-  <package ID="Owin" version="1.0" targetFramework="net452" />
-  <package ID="Respond" version="1.2.0" targetFramework="net461" />
-  <package ID="WebGrease" version="1.5.2" targetFramework="net461" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery.ValIDation" version="1.11.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.ProvIDers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.ValIDation" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NuGet.Build" version="2.12.0" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="1.0.11220.26" targetFramework="net461" />
+  <package id="NuGetPowerTools" version="0.29" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Unity" version="5.8.5" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.5" targetFramework="net461" />
+  <package id="Unity.Mvc" version="5.0.13" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
